plang/testing/logs/false-incorrect/157/program157.p.p
gKh8 RQIMF (On) :- iG; eLXnN (RTf2F) (Qt) (tP).
uFLWd (Ux).
q Q2 G5QT.


ij (Mm) DbVh.
zWlIk (k) (sD83 (D2)) m d :- (e zZLq z b).


a :- sawZ4 plA (om (u (YeKqQ) (pklx EfC XG0y)) (j) (rRfb (Tsod)) Oq) o EWaw2.


u (g1CM f) :- (d4Uw5); ((rV (i (o8 Ns (xKVJ (AkW))) (Y) x) (lF5 (kcO)) Zm, nd; (mR))).
zH (P6zY).

hCb :- aI.


y8D9n (N) si Z :- (s (TFamv), eW1n, g (acWyW mWD (K6i) ZOJyB) nYF, n (vwc WCh qx4ge) (ElHq2), (plv; c)), wz1bL (Eb1O); (caC (lF (AAxUZ) a9IoJ Hu (bu7C (eZ hCh sG))) VW (u1 (O)) dt); (i (d (L) Kp) (Cz8tm) Eu1), incW U (vJ41g Vj (ni44 (wL (JvQ) Hmk lX (Dtemu)) (Y))) gxlw (uH1lZ (ay uPB (b (ubeYF (b2 nUiKw)) (dAvJ reBa (xWM Tw nSHU (U) y)) iO (tvL I s)) (YRst))), nqE7 (oZMO u) hk.


? ((riaN p x7a (Oll); (o7 RlA O (L2T) m); gFXfy (dE))).
